# srs-eval

./: .gitignore  AGENTS.md  CHANGELOG.md  EVALUATION_METHOD.md  README.md  analyze_judge_consistency.py  compare_algorithms.py  eirene文件问题分析.md  main.py  pyproject.toml  srs-eval.code-workspace  增加评估维度.md  提示词优化分析报告.md  提示词优化效果分析.md  提示词优化效果对比分析.md  最终分析总结.md  正确命令格式.md  测试命令.sh  语法错误修复说明.md
.cursor/commands/: commit.md
.cursor/plans/: docgenerate-5d5accb9.plan.md  需求探索与改进优化（最终版）_46cc7cc7.plan.md
analyze_script/: analyze_weight_adjustment_all_iters.py  analyze_weight_adjustment_all_iters_v2.py  analyze_weight_adjustment_all_iters_v3.py  weight_adjustment_estimate_all_iters.md
output/: 示例报告.md
prompts/: evaluate_points.txt  extract_points.txt
prompts/v1/: evaluate_points.md
prompts/v2/: evaluate_points.md  extract_points.md
prompts/v2_en/: README.md  evaluate_points.md  extract_points.md
prompts/v3/: evaluate_points.md  extract_points.md
src/: __init__.py  config.py  document_parser.py  evaluator.py  output_formatter.py  point_extractor.py
src/utils/: checkpoint_utils.py  eval_cache.py  token_counter.py
